Padrón - Fix text align

--- a/assets/styles/templates/_stack.scss
+++ b/assets/styles/templates/_stack.scss
@@ -14,7 +14,7 @@
         @extend .button-transparent;
         margin-top: 0; width: 100%; text-align: center;
     }
-    p { margin-bottom: 15px; line-height: 20px; text-align: justify; }
+    p { margin-bottom: 15px; line-height: 20px; }
 }
 
 
